[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Scripts/World.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sounds/Shoot.ogg" type="AudioStream" id=4]
[ext_resource path="res://Sounds/Explosion.ogg" type="AudioStream" id=5]
[ext_resource path="res://Sounds/Split.ogg" type="AudioStream" id=6]
[ext_resource path="res://Stages/Line2D.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Particles2D.gd" type="Script" id=8]
[ext_resource path="res://Scripts/PlayersManager.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=10]
[ext_resource path="res://Sprites/fond.png" type="Texture" id=11]

[sub_resource type="Animation" id=1]

resource_name = "animation_line"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Line2D:width")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0, 2.0, 0.0 ]
}

[sub_resource type="ParticlesMaterial" id=2]

render_priority = 0
trail_divisor = 1
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 0 )
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 1.06531e-38
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 4.0
scale_random = 0.0
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Emission Shape", "Gravity", "Scale" ]

[sub_resource type="Shader" id=3]

code = "shader_type canvas_item;

uniform float p = 10.0;
uniform float A = 0.01;
uniform float timeScale = 0.3;

void fragment(){
	COLOR = texture(TEXTURE, vec2(UV.x+cos(UV.x*p+TIME-TIME/2.0+UV.y*p)*A, UV.y+cos(UV.y*p+TIME-TIME/2.0+UV.y*p)*A));
}"

[sub_resource type="ShaderMaterial" id=4]

render_priority = 0
shader = SubResource( 3 )
shader_param/p = null
shader_param/A = null
shader_param/timeScale = null

[node name="Game" type="Node"]

script = ExtResource( 1 )

[node name="World" type="Node2D" parent="." index="0"]

script = ExtResource( 2 )
_sections_unfolded = [ "Material", "Pause", "Transform", "Visibility", "Z Index" ]
enemy_scene = ExtResource( 3 )

[node name="Enemies" type="Node" parent="World" index="0"]

[node name="Enemy" parent="World/Enemies" index="0" instance=ExtResource( 3 )]

position = Vector2( 409.553, 134.826 )
can_split = false
follows = false

[node name="AudioShoot" type="AudioStreamPlayer" parent="World" index="1"]

stream = ExtResource( 4 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="AudioBurst" type="AudioStreamPlayer" parent="World" index="2"]

stream = ExtResource( 5 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="AudioSplit" type="AudioStreamPlayer" parent="World" index="3"]

stream = ExtResource( 6 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="AnimationPlayer" type="AnimationPlayer" parent="World" index="4"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/animation_line = SubResource( 1 )
blend_times = [  ]
autoplay = ""

[node name="Line2D" type="Line2D" parent="World" index="5"]

points = PoolVector2Array( 0, 0, 0, 0 )
width = 0.0
default_color = Color( 1, 0.4, 0.4, 1 )
texture_mode = 168453737
sharp_limit = 2.0
round_precision = 8
script = ExtResource( 7 )
_sections_unfolded = [ "Transform" ]

[node name="Particles2D" type="Particles2D" parent="World" index="6"]

emitting = false
amount = 200
lifetime = 0.5
one_shot = true
preprocess = 0.5
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 2 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
script = ExtResource( 8 )
_sections_unfolded = [ "Drawing", "Material", "Process Material", "Textures", "Time", "Transform", "Visibility" ]
player1 = NodePath("../Node2D/Player_1")
player2 = NodePath("../Node2D/Player_2")

[node name="Node2D" type="Node2D" parent="World" index="7"]

script = ExtResource( 9 )
remaining_shots = 0
limited_shots = false

[node name="Player_1" parent="World/Node2D" index="0" instance=ExtResource( 10 )]

position = Vector2( 897.481, 291.878 )
linear_damp = 4.0
_sections_unfolded = [ "Angular", "Applied Forces", "Collision", "Linear", "Material", "Pickable", "Transform", "Visibility", "Z Index", "collision" ]
vel = 1000
other_player = NodePath("../Player_2")

[node name="RaycastP1" type="RayCast2D" parent="World/Node2D/Player_1" index="3"]

enabled = true
exclude_parent = true
cast_to = Vector2( 0, 50 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="RayCastWalls" type="RayCast2D" parent="World/Node2D/Player_1" index="4"]

enabled = true
exclude_parent = true
cast_to = Vector2( 0, 50 )
collision_mask = 2

[node name="Player_2" parent="World/Node2D" index="1" instance=ExtResource( 10 )]

position = Vector2( 180, 300 )
linear_damp = 4.0
_sections_unfolded = [ "Collision", "Linear", "Material", "Pickable", "Transform", "Visibility", "Z Index", "collision" ]
vel = 1000
other_player = NodePath("../Player_1")

[node name="StaticBody2D" type="StaticBody2D" parent="World" index="8"]

visible = false
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 0.0
bounce = 0.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="World/StaticBody2D" index="0"]

build_mode = 1
polygon = PoolVector2Array( 0, 0, 0, 600, 1024, 600, 1024, 0 )

[node name="TextureRect" type="TextureRect" parent="World" index="9"]

self_modulate = Color( 0.588235, 0.588235, 0.588235, 1 )
show_behind_parent = true
material = SubResource( 4 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 11 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Material", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="HUD" type="Control" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect" ]

[node name="BarLoadingLaser" type="ProgressBar" parent="HUD" index="0"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -100.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
percent_visible = false
_sections_unfolded = [ "Anchor", "Margin", "Percent" ]

[node name="label_shot" type="Label" parent="HUD" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 319.0
margin_top = 70.0
margin_right = 502.0
margin_bottom = 84.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Destroy the cancerous cell !!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "custom_fonts" ]

[node name="countdown" type="Label" parent="HUD" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 424.0
margin_top = 234.0
margin_right = 589.0
margin_bottom = 319.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "Theme", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="CancerLevel" type="VBoxContainer" parent="HUD" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 11.0
margin_top = 11.0
margin_right = 226.0
margin_bottom = 84.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor" ]
__meta__ = {
"_edit_group_": true
}

[node name="BarCancerLevel" type="ProgressBar" parent="HUD/CancerLevel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 215.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.0
max_value = 20.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
percent_visible = false
_sections_unfolded = [ "Margin", "Material", "Percent", "Theme", "custom_colors", "custom_styles" ]

[node name="Label" type="Label" parent="HUD/CancerLevel" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 20.0
margin_right = 215.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Tumorous activity"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="number_changed" from="World" to="." method="_on_World_number_changed"]

[connection signal="can_fire" from="World/Node2D" to="World/Node2D" method="on_fire"]

[connection signal="can_fire" from="World/Node2D" to="World/Node2D/Player_2" method="_on_Node2D_can_fire"]

[connection signal="can_fire" from="World/Node2D" to="World/Node2D/Player_1" method="_on_Node2D_can_fire"]

[connection signal="object_detected" from="World/Node2D/Player_1" to="World/Node2D/Player_2" method="_on_Player_1_object_detected"]


